# pxq-auto

./: .gitignore  README.md  config.example.json  pyproject.toml
pxq_auto/: __init__.py  account_guidance.py  account_setup.py  api.py  auth.py  binding_setup.py  browser.py  checkout.py  cli.py  command_worker.py  commands.py  config.py  configuration.py  db.py  engine.py  feishu.py  feishu_cards.py  guard.py  inventory.py  login.py  messages.py  notify.py  order_guard.py  order_response.py  presale.py  public_api.py  purchase_page.py  runner.py  sale_gate.py  sale_state.py  scheduler.py  seat_map.py  seat_selection.py  service.py  site.py  task_service.py
